--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -33,7 +33,7 @@ body{
 @media screen and (min-width: 780px) {
    .calender{
     position: absolute;
-    top: 10%;
+    top: 90px;
     opacity: 1;
     z-index: 1;
 
