--- a/src/session.css
+++ b/src/session.css
@@ -6,12 +6,46 @@
     padding: 10px;
     margin-left: 10px;
     margin-right: 6px;
+    position: absolute;
+    top: 100px;
+    z-index: 0;
 }
+
+@media screen and (min-width:768px) {
+    .sessionbody{
+        /* display: grid; */
+        /* justify-content: center; */
+        background-color: rgb(201, 201, 201);
+        padding: 10px;
+        margin-left: 10px;
+        margin-right: 6px;
+        position:relative;
+        top: 0px;
+        z-index: 0;
+    }
+}
+
+
 .session{
     
     width: fit-content;
     margin: 20px;
     font-weight: bolder;
+    margin-top: 70px;
+}
+.sessionbody .title{
+    background-color: #005be4;
+    text-align: center;
+    color: white;
+}
+
+@media screen and (min-width:768px) {
+    .session{
+    
+        width: fit-content;
+        margin: 20px;
+        font-weight: bolder;
+    }
 }
 
 .SubjectTop_container{
@@ -19,6 +53,19 @@
     justify-content: center;
     /* background-color: blue; */
     padding-left: 10px;
+    opacity: 0;
+    z-index: -1;
+}
+
+@media screen and (min-width:768px) {
+    .SubjectTop_container{
+        /* width: fit-content; */
+        justify-content: center;
+        /* background-color: blue; */
+        padding-left: 10px;
+        opacity: 1;
+        z-index: 1;
+    }
 }
 
 
@@ -118,10 +165,10 @@
 }
 .SubSection button{
     padding: 5px;
-    color: rgb(5, 151, 0);
+    color: #005be4;
     font-weight: bold;
     border-radius: 5px;
-    background-color: rgba(13, 151, 0, 0.171);
+    background-color: #005be42c;
     border: none;
 }
 
@@ -140,3 +187,49 @@
     width: 0px;
 }
 
+
+.Session_For_Media{
+    position: fixed;
+    z-index: 999;
+    right: 20px;
+    bottom: 70px;
+    
+    
+
+}
+
+@media screen and (min-width: 768px) {
+   .Session_For_Media{
+    position: absolute;
+    opacity:0;
+
+
+}
+}
+
+.Session_For_Media button{
+    font-weight: bold;
+    font-size: 20px;
+
+}
+
+.SubjectTop_container_media{
+    display: grid;
+    background-color: red;
+
+
+}
+
+@media screen and (min-width: 768px) {
+    .SubjectTop_container_media{
+        display: grid;
+        background-color: red;
+        
+    
+    }
+}
+
+.session_media{
+    font-weight: bolder;
+
+}
