--- a/src/session.css
+++ b/src/session.css
@@ -211,6 +211,19 @@
 
 
 
+.lightbox1 {
+    position: fixed;
+    top: 300px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background: rgba(0, 0, 0, 0.6); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
 .lightbox {
     position: fixed;
     top: 0;
@@ -221,7 +234,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+    
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    
+}
 
   
 
