--- a/src/MissionFolder/mission.css
+++ b/src/MissionFolder/mission.css
@@ -9,6 +9,7 @@
     margin-bottom: 20px;
     position: absolute;
     top: 50%;
+    z-index: 100;
     /* gap: 30px */
     
 
@@ -96,6 +97,8 @@
         margin-bottom: 20px;
         position: absolute;
         top: 65%;
+        /* z-index: -1; */
+
         /* gap: 30px */
     
     
