--- a/src/MissionFolder/mission.css
+++ b/src/MissionFolder/mission.css
@@ -16,6 +16,33 @@
 
 }
 
+
+.mission span {
+    border: none;
+    transition: none;
+    
+    }
+
+    .mission span:hover {
+        transform: none;
+        
+        }
+
+    .mission span img{
+    width: 160%;
+    padding: 0px;
+    margin: 0px;
+
+    
+    }
+
+    span button{
+        position: absolute;
+        top: 580px;
+        
+        
+    }
+
 .mission-statement{
 
     display: grid;
@@ -96,7 +123,7 @@
         margin-left: 10%;
         margin-bottom: 20px;
         position: absolute;
-        top: 65%;
+        top: 600px;
         /* z-index: -1; */
 
         /* gap: 30px */
@@ -104,6 +131,33 @@
     
     }
     
+
+    .mission span {
+    border: none;
+    transition: transform 0.5s;
+    
+    }
+
+    .mission span:hover {
+        transform: scale(1.1);
+        
+        }
+
+    .mission span img{
+    width: 110%;
+    padding: 0px;
+    margin: 0px;
+
+    
+    }
+
+    span button{
+        position: absolute;
+        top: 250px;
+        
+        
+    }
+
     .mission-statement{
     
         display: grid;
@@ -119,6 +173,8 @@
         
     }
     
+   
+
     .mission-statement h1{
         margin-bottom: 0px;
         /* background-color: blue; */
