--- a/src/SliderComponent/Slider/Slider.css
+++ b/src/SliderComponent/Slider/Slider.css
@@ -14,7 +14,8 @@
     overflow: hidden;
     width: 100%;
     height: 400px;
-    margin-top: 60px;
+    margin-top: 58px;
+    
 }
 
 .slider img{
@@ -28,7 +29,7 @@
         overflow: hidden;
         width: 100%;
         height: 600px;
-        margin-top: 60px;
+        margin-top: 0px;
     }
     
     .slider img{
@@ -70,7 +71,7 @@
     }
     
     .Write-Up-Heading span{
-        color: rgb(48, 206, 0);
+        color: #4CAF50;
     }
     
     .Write-Up-Heading h5{
