--- a/src/session.css
+++ b/src/session.css
@@ -211,41 +211,42 @@
 
 
 
-.lightbox1 {
-    position: fixed;
-    top: 300px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    /* background: rgba(0, 0, 0, 0.6); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
 .lightbox {
     position: fixed;
-    top: 0;
+    top: 15%;
     left: 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%%; */
     /* background: rgba(0, 0, 0, 0.6); */
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 
 .close-button {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 5%;
     background: none;
     border: none;
     cursor: pointer;
     padding: 10px;
+    color: white;
     
+}
+
+@media screen and (min-width: 768px) {
+    .close-button {
+        position: absolute;
+        top: 10px;
+        right: 36%;
+        background: white;
+        border: none;
+        cursor: pointer;
+        padding: 10px;
+        
+        
+    }
 }
 
   
