--- a/src/session.css
+++ b/src/session.css
@@ -213,7 +213,7 @@
 
 .lightbox {
     position: fixed;
-    top: 15%;
+    top: 10%;
     left: 0;
     width: 100%;
     /* height: 100%%; */
@@ -236,6 +236,19 @@
 }
 
 @media screen and (min-width: 768px) {
+
+    .lightbox {
+        position: fixed;
+        top: 15%;
+        left: 0;
+        width: 100%;
+        /* height: 100%%; */
+        /* background: rgba(0, 0, 0, 0.6); */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .close-button {
         position: absolute;
         top: 10px;
