--- a/src/Js1LearningArea/LearnEconomics.css
+++ b/src/Js1LearningArea/LearnEconomics.css
@@ -249,6 +249,14 @@
       
     }
 
+    @media screen and (min-width:768px) {
+      .Space-Top{
+        width: 100%;
+        height: 0px;
+        
+      }
+    }
+
 .Topic-Writeup{
     /* background-color: aquamarine; */
     margin-top: 0px;
