--- a/src/session.css
+++ b/src/session.css
@@ -208,12 +208,32 @@
     
     }
 } */
+.video-lightbox .lightbox{
+    
+    /* background-color: red; */
+    width:fit-content;
+    margin-left:auto;
+    
 
+    /* margin-right: 50px; */
+}
+
+@media screen and (min-width:768px) {
+    .video-lightbox .lightbox{
+    
+        /* background-color: red; */
+        width:fit-content;
+        margin-left: 40%;
+        
+    
+        /* margin-right: 50px; */
+    }
+}
 
 
 .lightbox {
     position: fixed;
-    top: 10%;
+    top: 8%;
     margin-left: 5px;
     margin-right:5px;
     left: 0;
@@ -225,16 +245,28 @@
     align-items: center;
 }
 
-.close-button {
+
+.content button{
     position: absolute;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    right: 15px;
     top: 10px;
-    right: 5%;
-    background: none;
-    border: none;
+    background-color: rgba(255, 255, 255, 0.288);
     cursor: pointer;
-    padding: 10px;
-    color: white;
+
     
+}
+
+
+.close-button {
+    /* position: absolute; */
+    /* top: 10px; */
+    /* right: 5%; */
+    /* background: none; */
+    /* border: none; */
+    /* padding: 10px; */
+     
 }
 
 @media screen and (min-width: 768px) {
@@ -251,15 +283,15 @@
         align-items: center;
     }
 
-    .close-button {
+    .content button{
         position: absolute;
+        color: rgb(255, 255, 255);
+        font-size: 15px;
+        right: 10px;
         top: 10px;
-        right: 36%;
-        background: white;
-        border: none;
+        background-color: rgba(255, 255, 255, 0.288);
         cursor: pointer;
-        padding: 10px;
-        
+    
         
     }
 }
