--- a/src/ImageSlideFolder/ImageSlide.css
+++ b/src/ImageSlideFolder/ImageSlide.css
@@ -1,25 +1,44 @@
-
-.image-container {
-    width: 100%;
-    overflow: auto;
-    white-space: nowrap;
-    margin-top: 930px;
-    border: 1px solid rgba(0, 0, 0, 0.281);
-    
+.over_container{
+    display: grid;
+    /* background-color: red; */
+    margin-top: 233%;
 }
 
-.image-container button{
-    /* margin-top: 2%; */
-    /* height:300px; */
-    border: none;
-    /* width: 20%; */
-    margin-right: 10px;
+.Usefull{
+    margin: 0px;
+}
+
+.image-container {
+    overflow: auto;
+    white-space: nowrap;
     margin-left: 10px;
+    margin-right:10px;
+    padding-left: 0px;
+
+}
+
+
+.image-container button{
+    border: none;
+    margin-top: 0%;
+    margin-right: 5px;
+    margin-left: 5px;
     border-radius: 10px;
     overflow: hidden;
-    background-color: #4CAF50;
+    /* background-color: #4CAF50; */
+    width: 200px;
+    height: 150px;
+       
+       
+}
 
-   
+.image-container button img{
+    /* margin-top: 1%; */
+    width: 100%;
+    height: 120px;
+    display: block;
+    
+    
 }
 
 /* .image-container img {
@@ -33,33 +52,53 @@
 } */
 
 @media screen and (min-width:768px){
+
+    .over_container{
+        display: grid;
+        /* background-color: red; */
+        margin-top: 18%;
+        /* margin-right:30px; */
+    }
+
+    .Usefull{
+        margin: 0px;
+        padding-left: 15px;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    
    
     .image-container {
-        /* background-color: aqua; */
-        margin-top: 185px;
-        margin-left: 70px;
-        width: 90%;
-        height: 400px;
+        background-color: rgba(228, 228, 228, 0.26);
+        margin-left: 20px;
+        margin-right:20px;
+        padding-left: 20px;
+        padding-bottom: 0px;
+        height: fit-content;
         overflow: auto;
-        white-space: nowrap;
+        white-space:unset;
+        /* border: 1px solid rgba(0, 0, 0, 0.281); */
         
     }
     
     .image-container button{
-        margin-top: 2%;
-        height:300px;
-        border: none;
-        width: 20%;
-        margin-right: 10px;
-        margin-left: 10px;
-        border-radius: 10px;
-        overflow: hidden;
-        background-color: #4CAF50;
-        color: white;
-        font-size: 20px;
-       
+        background-color: rgba(228, 228, 228, 0.26);
+        margin-top: 1%;
+        width: 230px;
+        height: 150px;
+        
     }
     
+    .image-container button img{
+        /* margin-top: 0%; */
+        /* height: auto; */
+        width: 100%;
+        height: 120px;
+        display: block;
+        
+        
+    }
+
     .image-container::-webkit-scrollbar{
         /* width: 0; */
     }
@@ -75,8 +114,6 @@
         
         
     }
-
-
 
 }
 
