--- a/src/ImageSlideFolder/ImageSlide.css
+++ b/src/ImageSlideFolder/ImageSlide.css
@@ -4,6 +4,14 @@
     margin-top: 233%;
 }
 
+
+.over_container2{
+    display: grid;
+    /* background-color: red; */
+    margin-top: 1%;
+    /* margin-right:30px; */
+}
+
 .Usefull{
     margin: 0px;
 }
@@ -57,6 +65,13 @@
         display: grid;
         /* background-color: red; */
         margin-top: 18%;
+        /* margin-right:30px; */
+    }
+
+    .over_container2{
+        display: grid;
+        /* background-color: red; */
+        margin-top: 1%;
         /* margin-right:30px; */
     }
 
