--- a/src/ImageSlideFolder/ImageSlide.css
+++ b/src/ImageSlideFolder/ImageSlide.css
@@ -1,7 +1,7 @@
 .over_container{
     display: grid;
     /* background-color: red; */
-    margin-top: 265%;
+    margin-top: 890px;
 }
 
 
@@ -64,7 +64,7 @@
     .over_container{
         display: grid;
         /* background-color: red; */
-        margin-top: 18%;
+        margin-top: 255px;
         /* margin-right:30px; */
     }
 
@@ -84,7 +84,7 @@
     
    
     .image-container {
-        background-color: rgba(228, 228, 228, 0.26);
+        background-color: #bcedff;
         margin-left: 20px;
         margin-right:20px;
         padding-left: 20px;
@@ -97,7 +97,7 @@
     }
     
     .image-container button{
-        background-color: rgba(228, 228, 228, 0.26);
+        background-color: #bcedff;
         margin-top: 1%;
         width: 230px;
         height: 150px;
