--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -21,9 +21,9 @@ margin-left: 5%;
   /* display: flex; */
   position:fixed;
   /* justify-content:space-between; */
-    /* background-color: rgb(230, 35, 35); */
-    background: transparent;
-    backdrop-filter: blur(10px);
+    background-color:white;
+    /* background: transparent;
+    backdrop-filter: blur(10px); */
     width: 100%;
     margin: 0%;
     
