--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -1,41 +1,44 @@
-
-
 .page-container{
     display: flex;
     justify-content: center;
-    background-color:rgb(226, 240, 235) ;
+    background-color: #B0DDEE;
     align-items: center;
-    /* height: 500px; */
-    margin-top: 60px;
-   
+    min-height: 100vh; 
+    margin: 0;
+    padding: 0;
 }
 
 @media screen and (min-width:768px) {
     .page-container{
         display: flex;
         justify-content: center;
-        background-image: url('./images.jpg/loginBackground.jpg');
+        background-color: #B0DDEE;
         align-items: center;
-        height: 90vh;
-        margin-top: 0px;
+        min-height: 100vh; 
+        margin: 0;
+        padding: 0;
     }
 }
 
 .contact-grid-wrapper{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-gap: 100px;
-    margin-top: 0px;
+    padding: 30px;
+    background-color:#BCEDFF;
+    display: flex;
+    /* width: 90%; */
+    /* margin-top: 50px; */
+    gap: 50px;
+    border-radius: 10px;
 }
 
 @media screen and (min-width:768px) {
     .contact-grid-wrapper{
-        width: 1000px;
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-        grid-gap: 100px;
-        /* background-color: red; */
+    padding: 30px;
+    background-color:#BCEDFF;
+    display: flex;
+    gap: 50px;
+    border-radius: 10px;
+    /* width: fit-content; */
+    /* margin-top: 0px; */
     }
 }
 
@@ -46,17 +49,22 @@
 @media screen and (min-width: 768px) {
     .company-data-bar{
         z-index: 1;
+        /* background-color: blue; */
+        display: flex;
+        gap: 40px;
+        justify-content: center;
+        text-align: center;
     }
 }
 
 .company-data-bar > .comapny-logo-on-side img{
-width: 100%;
+width: 200px;
 margin-bottom: 20px;
 
 }
 
 .company-data-bar > .companydetails-contact-wrapper{
-    font-weight:700;
+    font-weight:700px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -83,10 +91,11 @@ margin-bottom: 20px;
     /* display: grid; */
     position: absolute;
     justify-content: center;
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
     padding-bottom: 30px;
-    width: 100%;
-    margin-top: 0px;
+    width: 85%;
+    top: 25%;
+    left: 8%;
     
     
 }
@@ -96,10 +105,11 @@ margin-bottom: 20px;
         /* display: grid; */
         position:relative;
         justify-content: center;
-        background-color: #f1f1f1;
+        /* background-color: #f1f1f1; */
         padding-bottom: 30px;
         width: 400px;
         margin-top: 0px;
+        left: 0%;
     }
 }
 .form > .form-group{
@@ -124,6 +134,22 @@ margin-bottom: 20px;
     display: block;
     transition: all 0.3s;
     margin-left: 15px;
+}
+
+@media screen and (min-width:768px) {
+    .form input{
+        /* font-size: 20px; */
+        font-family: inherit;
+        color: inherit;
+        padding: 5px;
+        border-radius:  5px;
+        border: none;
+        /* border-bottom: 3px solid #000000; */
+        width: 90.6%;
+        display: block;
+        transition: all 0.3s;
+        margin-left: 15px;
+    }
 }
 
 .form input:focus{
