--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -1,7 +1,7 @@
 .page-container{
     display: flex;
     justify-content: center;
-    background-image: url("./images.jpg/loginBackground.jpg");
+    background-image: url("./images.jpg/StarBlue.jpg");
     background-size: cover;
     /* background-color: #B0DDEE; */
     align-items: center;
@@ -14,6 +14,8 @@
     .page-container{
         display: flex;
         justify-content: center;
+        background-image: url("./images.jpg/StarBlue.jpg");
+        background-size: cover;
         /* background-color: #B0DDEE; */
         align-items: center;
         min-height: 100vh; 
