--- a/src/Loginforpage.css
+++ b/src/Loginforpage.css
@@ -88,7 +88,7 @@ padding-left: 20px;
     text-decoration: none;
     /* background-color: red; */
     /* margin-top: 10px; */
-    /* gap: 20px; */
+    gap: 1px;
 
    
   }
@@ -134,6 +134,13 @@ padding-left: 20px;
   .border2{
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+    
+  }
+
+  .border2 span{
+    padding:0px;
+    margin: 0px;
+    /* background-color: red; */
   }
 
   .password-input {
@@ -141,6 +148,7 @@ padding-left: 20px;
     justify-content:flex-start;
     /* position: relative; */
     /* background-color: aqua; */
+    gap: 1px;
 
 }
 
