--- a/src/Loginforpage.css
+++ b/src/Loginforpage.css
@@ -148,7 +148,7 @@ padding-left: 20px;
     justify-content:flex-start;
     /* position: relative; */
     /* background-color: aqua; */
-    gap: 1px;
+    /* gap: 1px; */
 
 }
 
@@ -161,6 +161,9 @@ padding-left: 20px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   background-color: white;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 2px;
 
 
 }
