--- a/src/Countdown.css
+++ b/src/Countdown.css
@@ -3,20 +3,28 @@
     display:flex ;
     /* background-color: rgb(0, 60, 255); */
     justify-content: center;
+    z-index: 1;
+    gap: 5px;
    
 }
 
 .Timer h1{
-    
+    display: grid;
     background-color: red;
     width: 50px;
     margin-bottom: 0px;
     border-bottom-right-radius: 15px;
     border-top-left-radius: 15px;
     color: white;
-    padding-left: 8px;
+    
 
 }
+
+.Timer span{
+    font-size: 10px;
+    margin: 3px;
+}
+
 .red-text{
     color: red;
 }
