--- a/src/VideoSources/VideoPlayer.css
+++ b/src/VideoSources/VideoPlayer.css
@@ -13,3 +13,107 @@
         box-sizing: border-box;
     }
 }
+
+.comment-section {
+    background-color: #f8f9fa;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 24px;
+    margin-top: 0px;
+  }
+  
+  .comment-section h2 {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 16px;
+  }
+  
+  .comment-section form {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  
+  .comment-section textarea {
+    background-color: #ffffff;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    font-size: 16px;
+    padding: 10px;
+    resize: vertical;
+  }
+  
+  .comment-section button {
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 12px 24px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .comment-section button:hover {
+    background-color: #0056b3;
+  }
+  
+  .comment-item {
+    background-color: #ffffff;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-top: 16px;
+    padding: 10px;
+  }
+
+  .total-Container Button{
+    display: flex;
+    background-color: #F8F9FA;
+    gap: 40px;
+   
+  }
+
+  .total-Container {
+    margin-left: 100px;
+  }
+  
+  /* .total-Comment{
+    background-color: #F8F9FA;
+  } */
+
+
+  .comment-item p {
+    font-size: 16px;
+    margin: 0;
+  }
+
+  .comment-username{
+    display: flex;
+    justify-content: space-between;
+    background-color: #F8F9FA;
+    border-radius: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+
+  }
+
+  .comment-body{
+    padding-left: 5px;
+    padding-right: 5px;
+
+  }
+
+  .comment-item span{
+    font-weight: bold;
+    margin-left: 5px;
+  }
+  
+  .comment-item p:first-child {
+    margin-bottom: 2px;
+  }
+  
+  .comment-item p:last-child {
+    color: #6c757d;
+    font-size: 14px;
+  }
+  
