--- a/src/Forms/AdmissionForm.css
+++ b/src/Forms/AdmissionForm.css
@@ -17,7 +17,7 @@
 }  */
 
 .FormBody{
-    background-color: #B0DDEE;
+    /* background-color: #B0DDEE; */
     display:grid;
     /* justify-content: center; */
     border-radius: 10px;
@@ -221,7 +221,7 @@
     }
     .FormHeading p{
         /* text-align: center; */
-        border: 1px solid red;
+        /* border: 1px solid red; */
         border-radius: 10px;
         margin: 10px;
         padding: 5px;
