--- a/src/Admin/Exams/Jss1Econs.css
+++ b/src/Admin/Exams/Jss1Econs.css
@@ -4,7 +4,8 @@
     border: 1px solid #e0e0e0;
     border-radius: 4px;
     margin-bottom: 10px;
-    line-height: 12px;
+    line-height: 22px;
+    background-color: white;
   }
   
   .demo-editor {
