--- a/src/VideoSources/VideoPlayer.css
+++ b/src/VideoSources/VideoPlayer.css
@@ -44,14 +44,32 @@
     resize: vertical;
   }
   
+.send{
+  display: flex;
+  justify-content: space-around;
+}
+
+.sendd{
+  width: 50%;
+  /* border: 1px solid red; */
+}
+
+.sendd img{
+  width:40px;
+  color: antiquewhite;
+  /* background-color: #ced4da; */
+  
+}
+
   .send button {
-    background-color: #007bff;
+    
+    /* background-color: #007bff; */
     border: none;
     border-radius: 4px;
     color: #ffffff;
     cursor: pointer;
     font-size: 16px;
-    padding: 12px 24px;
+    padding: 0px;
     transition: background-color 0.3s ease;
   }
   
@@ -80,7 +98,7 @@
 
   .total-Comment-Container Button{
     position: inherit;
-    background-color: #f8f9fa;
+    background-color: #86b7e7;
     font-size: small;
     margin-left: 10px;
 
@@ -193,4 +211,14 @@
     color: whitesmoke;
     border-radius: 5px;
 
+  }
+
+  .ChatBox{
+    background-color: #dce9f7;
+    /* border: 1px solid red; */
+    overflow: auto;
+    width: 100%;
+    height: 450px;
+    scroll-behavior: transparent;
+    
   }
